# rust-order-api

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/1_create_users/: up.sql
migrations/2_create_categories/: up.sql
migrations/3_create_products/: up.sql
migrations/4_create_campaigns/: down.sql  up.sql
migrations/5_create_orders/: up.sql
migrations/6_create_orders_products/: up.sql
src/: insertables.rs  lib.rs  main.rs  models.rs  schema.rs
src/controllers/: campaigns.rs  functions.rs  orders.rs  products.rs  users.rs
src/seed/: campaigns.json
